# anyschema

./: .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  _typos.toml  bump-version.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  documentation.yaml  feature-request.yaml
.github/workflows/: check-docs-build.yaml  deploy-docs.yaml  pre-commit-update.yaml  prek-autoupdate.yml  pull-request.yaml  pytest.yaml  release.yaml
anyschema/: __init__.py  _anyschema.py  _dependencies.py  _metadata.py  _utils.py  adapters.py  serde.py  typing.py
anyschema/parsers/: __init__.py  _annotated.py  _base.py  _builtin.py  _forward_ref.py  _pipeline.py  _union.py  annotated_types.py  attrs.py  marshmallow.py  pydantic.py  sqlalchemy.py
api-reference/: index.html
api-reference/adapters/: index.html
api-reference/anyschema/: index.html
api-reference/exceptions/: index.html
api-reference/parsers/: index.html
api-reference/serde/: index.html
api-reference/typing/: index.html
architecture/: index.html
docs/: advanced.md  api-reference.md  architecture.md  getting-started.md  index.md
docs/api-reference/: adapters.md  anyschema.md  exceptions.md  index.md  parsers.md  serde.md  typing.md
docs/css/: extra.css
docs/user-guide/: advanced.md  best-practices.md  custom-end-to-end-example.md  field-metadata.md  getting-started.md  metadata.md  openapi-compatibility.md  serde.md  troubleshooting.md
search/: search_index.json
src/anyschema/: __init__.py  _anyschema.py  _base.py  _dependencies.py  _jsonschema.py  _mapping.py  _metadata.py  _parser.py  _pydantic.py  _utils.py  adapters.py  exceptions.py  serde.py  typing.py
src/anyschema/_parsers/: __init__.py  _dataclasses.py  _datetime.py  _integer.py  annotated_types.py  py_types.py  pydantic.py
src/anyschema/parsers/: __init__.py  _annotated.py  _base.py  _builtin.py  _forward_ref.py  _pipeline.py  _union.py  annotated.py  annotated_types.py  base.py  forward_ref.py  py_types.py  pydantic.py  pydantic_types.py  sqlalchemy.py  union_types.py
tests/: conftest.py  dependencies_test.py  module_getattr_test.py  serde_test.py  show_versions_test.py  version_test.py
tests/adapters/: attrs_adapter_test.py  custom_adapters_test.py  dataclass_adapter_test.py  into_ordered_dict_adapter_test.py  jsonschema_adapter_test.py  marshmallow_adapter_test.py  pydantic_adapter_test.py  sqlalchemy_adapter_test.py  typed_dict_adapter_test.py
tests/anyfield/: descriptions_test.py  fields_test.py  nullables_test.py
tests/anyschema/: dtypes_test.py  equality_test.py  field_test.py  hash_test.py  initialization_test.py  names_test.py  to_arrow_test.py  to_pandas_test.py  to_polars_test.py  to_pyspark_test.py  uniques_test.py
tests/field/: field_test.py  metadata_mutation_test.py  parse_into_field_test.py
tests/parsers/: __init___test.py  _annotated_test.py  _base_test.py  _builtin_derived_types_test.py  _builtin_test.py  _forward_ref_test.py  _union_test.py  annotated_test.py  annotated_types_test.py  attrs_test.py  base_test.py  date_test.py  datetime_test.py  float_test.py  forward_ref_dependency_mock_test.py  forward_ref_test.py  integer_test.py  marshmallow_test.py  parsers_dependency_mock_test.py  parsers_test.py  py_types_test.py  pydantic_derived_types_test.py  pydantic_extra_types_test.py  pydantic_test.py  pydantic_types_test.py  sqlalchemy_test.py  union_test.py  union_types_test.py
tests/pydantic/: boolean_test.py  date_test.py  datetime_test.py  float_test.py  integer_test.py  list_test.py  literal_test.py  parsing_exception_test.py  string_test.py  struct_test.py  utils.py
tests/spec_to_narwhals/: typed_dict_test.py
tests/spec_to_schema/: attrs_test.py  dataclass_test.py  jsonschema_test.py  marshmallow_test.py  pydantic_test.py  sqlalchemy_test.py  typed_dict_test.py  x_anyschema_test.py
tests/test_anyschema/: to_arrow_test.py  to_pandas_test.py  to_polars_test.py
tests/test_pydantic/: boolean_test.py  date_test.py  datetime_test.py  integer_test.py  string_test.py  struct_test.py
user-guide/advanced/: index.html
user-guide/best-practices/: index.html
user-guide/custom-end-to-end-example/: index.html
user-guide/getting-started/: index.html
user-guide/metadata/: index.html
user-guide/openapi-compatibility/: index.html
user-guide/serde/: index.html
user-guide/troubleshooting/: index.html
