
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyschema"
version = "0.1.0"
description = "From pydantic to any frame schema"
readme = "README.md"
authors = [{ name = "FBruzzesi"}]
requires-python = ">=3.10"
dependencies = [
    "narwhals>=2.0.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]

[dependency-groups]
test = [
  "narwhals[pandas,polars,pyarrow]",
  "covdefaults>=2.3.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "hypothesis>=6.0.0",
  "typing_extensions>=4.0.0",
]

typing = [
    "pandas-stubs",
    "pyarrow-stubs",
    "mypy",
    "pyright",
    "ty",
]

docs = [
  "black",  # required by mkdocstrings_handlers
  "markdown-exec[ansi]",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "PLC0415",
    "UP045",
    "COM812",
    "ISC001",
    "D100",  # Checks for undocumented public module definitions.
    "D104",  # Checks for undocumented public package definitions.
    "D107",  # Checks for public __init__ method definitions that are missing docstrings.
    "RET505",
    "FIX002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D101",
    "D103",
    "S101",
    "UP",
    "SLF",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 95
omit = [
    "src/anyschema/typing.py",
]
