[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyschema"
version = "0.1.0"
description = "From type specifications to dataframe schemas"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Francesco Bruzzesi"}]
requires-python = ">=3.10"
dependencies = [
    "narwhals>=2.0.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]

[dependency-groups]
tests = [
  "narwhals[pandas,polars,pyarrow]",
  "covdefaults>=2.3.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "hypothesis>=6.0.0",
  "typing_extensions>=4.0.0",
]

typing = [
    "pandas-stubs",
    "pyarrow-stubs",
    "mypy",
    "pyright",
    "ty",
]

docs = [
  "anyschema[pydantic]",
  "black",  # required by mkdocstrings_handlers
  "markdown-exec[ansi]",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocstrings-python",
  "mkdocs-autorefs",
  "pandas",
  "polars",
  "pyarrow",
]

[tool.hatch.build.targets.sdist]
include = [
  "anyschema/*",
  "tests/*",
]

[tool.hatch.build.targets.wheel]
include = [
  "anyschema/*",
]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "PLC0415",
    "UP045",
    "COM812",
    "ISC001",
    "D100",  # Checks for undocumented public module definitions.
    "D104",  # Checks for undocumented public package definitions.
    "D107",  # Checks for public __init__ method definitions that are missing docstrings.
    "D205",
    "RET505",
    "FIX002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D101",
    "D103",
    "S101",
    "UP",
    "SLF",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 95
omit = [
    "anyschema/typing.py",
]

[tool.rumdl]
line-length = 120
flavor = "mkdocs"
include = ["docs/", "README.md"]
disable = [
  "MD052",  # Fix broken reference links and images  # NOTE: false positive in code blocks e.g. `pip install anyschema[pydantic]` as well as github alerts e.g. [!CAUTION].
]

[tool.rumdl.per-file-ignores]
"docs/architecture.md" = [
  "MD005",  # List indentation should be consistent  # NOTE: For nested lists mkdocs requires 4 spaces indentation
  "MD006",  # Consider starting bulleted lists at the beginning of the line  # NOTE: Fore nested lists this is not possible?
  "MD056",  # Keep table column count consistent  # NOTE: false positive if "|" is in a code block, see https://github.com/rvben/rumdl/issues/163
]
